# cutenp

./: CMakeLists.txt  README.md  main.cpp  main.qml  preferenceswindow.qml  qml.qrc  resources.qrc
.github/workflows/: build.yml  cpack-deb.yml  cpack-nsis.yml
src/: AboutWindow.qml  PreferencesWindow.qml  aboutwindow.qml  aboutwindowBackend.hpp  aboutwindowbackend.hpp  main.cpp  main.qml  preferenceswindow.qml  preferenceswindowbackend.hpp  resources.qrc
src/CodeEditor/: CodeEditor.qml  qmldir
src/CodeEditor/Backend/: codeeditorbackend.cpp  codeeditorbackend.h  linenumbers.hpp
src/QML/: main.qml
src/common/: nphelpers.cpp  nphelpers.h
src/settings/: configmanager.cpp  configmanager.h
